[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/goal.png" type="Texture" id=1]
[ext_resource path="res://script/Goal.gd" type="Script" id=2]
[ext_resource path="res://assets/sound/goal.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/hit.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 72 )

[node name="Goal" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Outside" type="Area2D" parent="."]

[node name="Collider" type="CollisionPolygon2D" parent="Outside"]
polygon = PoolVector2Array( -16, 80, 16, 80, 16, -80, -16, -80, -16, -72, 8, -72, 8, 72, -16, 72 )

[node name="Inside" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="Inside"]
position = Vector2( 4, 0 )
shape = SubResource( 1 )

[node name="Goal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="OutsideHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"
[connection signal="area_entered" from="Outside" to="." method="_on_Outside_area_entered"]
[connection signal="area_entered" from="Inside" to="." method="_on_Inside_area_entered"]
